--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Redirecione para o whatsapp rapidamente">
+	<meta name="author" content="Otavio Luiz Gonzaga">
+	<meta name="keywords" content="whatsapp,redirect,wame,redirecionar,mensagem,msg">
 	<title>Document</title>
 </head>
 <body>
