--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="/script.js" defer></script>
+	<script src="./script.js" defer></script>
 	<form>
 		<label for="int_id">Código internacional:</label>
 		<select id="int_id" name="int_id">
